--- a/frontend/src/main/resources/org/fioletowi/frontend/admin profile.fxml
+++ b/frontend/src/main/resources/org/fioletowi/frontend/admin profile.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFE8B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.farm_registration.user_profile.UserProfileController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFE8B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fioletowi.frontend.user_profile.UserProfileController">
    <children>
       <AnchorPane layoutY="65.0" prefHeight="336.0" prefWidth="127.0" style="-fx-background-color: #47663B;">
          <children>
             <Pane layoutX="8.0" layoutY="70.0" prefHeight="37.0" prefWidth="110.0" style="-fx-background-color: #1F4529; -fx-background-radius: 10;">
                <children>
-                  <Text fill="WHITE" layoutX="8.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome (Owner)" />
+                  <Text fill="WHITE" layoutX="8.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome (Admin)" />
                </children>
             </Pane>
             <Button layoutX="34.0" layoutY="296.0" mnemonicParsing="false" style="-fx-background-color: #1F4529;" text="Log Out" textFill="WHITE" />
@@ -92,7 +92,6 @@
                </font>
             </Text>
 
-            <!-- These are the new Label elements to display user information -->
             <Label fx:id="emailLabel" layoutX="130.0" layoutY="68.0" text="()">
                <font>
                   <Font name="System Bold" size="12.0" />
