--- a/frontend/src/main/resources/org/fioletowi/frontend/admin profile password.fxml
+++ b/frontend/src/main/resources/org/fioletowi/frontend/admin profile password.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" style="-fx-background-color: #FFE8B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.farm_registration.user_profile.ChangePasswordController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" style="-fx-background-color: #FFE8B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fioletowi.frontend.user_profile.ChangePasswordController">
    <children>
       <Pane layoutX="73.0" layoutY="21.0" prefHeight="30.0" prefWidth="155.0" style="-fx-background-color: #997C70; -fx-background-radius: 10;">
          <children>
